
2020-05-06  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: allow COBC, COBCRUN, COBCRUN_DIRECT to override
	  for make localcheck (especially useful in case of installprefix)
	* Makefile.am: added some comments and an explicit warning for
	  installcheck target

2020-05-04  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: pass exec_prefix as it is likely referenced in the LIBS
	  entries used (thanks to Robert Dubner)
	* atlocal.in, atlocal_valgrind, atlocal_win: unified

2020-04-02  Simon Sobisch <simonsobisch@gnu.org>

	* run_prog_manual.sh.in, testsuite.src/run_manual_screen.at:
	  pass program to run to the script instead of hard-wire of "./prog"

2020-03-22  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal_win: use intermediate info.out instead of calling
	  cobc --info multiple times

2020-02-02  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: always set COB_SCHEMA_DIR to not access anything outside
	  of builddir

2020-01-02  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite.src: moved trace related tests from run_misc.at to run_file.at

2019-06-30  Simon Sobisch <simonsobisch@gnu.org>

	* run_prog_manual.sh.in, Makefile.am: changed the manual test runner
	  to be a script handled by autoconf instead of make

2019-06-18  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: explicit disable BDB internal locking by unsetting DB_HOME
	  to work around issues in different environments and to not pollute the
	  users's general BDB locking files

2019-06-11  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (check, checkmanual): now fails if the testsuite reports
	  any unexpected result (exit with non-zero return)

2019-05-24  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: early unset of COB_ variables (before we set them...)

2019-04-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am, atlocal.in: splitted some make targets and added new
	  localcheck target, which runs the testsuite using the current