@@ -161,7 +161,7 @@ COB_EXE_EXT="@COB_EXE_EXT@"
 COB_BIGENDIAN="@COB_BIGENDIAN@"
 COB_HAS_ISAM="@COB_HAS_ISAM@"
 COB_HAS_XML2="@COB_HAS_XML2@"
-COB_HAS_CJSON="@COB_HAS_CJSON@"
+COB_HAS_JSON="@COB_HAS_JSON@"
 COB_HAS_CURSES="@COB_HAS_CURSES@"
 COB_HAS_64_BIT_POINTER="@COB_HAS_64_BIT_POINTER@"
 if test "x$MSYSTEM" != "x" -o "$OSTYPE" = "cygwin"; then
@@ -170,7 +170,7 @@ if test "x$MSYSTEM" != "x" -o "$OSTYPE" = "cygwin"; then
 	# --> disabling the tests for this feature
 	COB_HAS_CURSES="no"
 fi
-export COB_HAS_ISAM COB_HAS_XML2 COB_HAS_CJSON COB_HAS_CURSES COB_HAS_64_BIT_POINTER
+export COB_HAS_ISAM COB_HAS_XML2 COB_HAS_JSON COB_HAS_CURSES COB_HAS_64_BIT_POINTER
 export COBC COBCRUN COBCRUN_DIRECT RUN_PROG_MANUAL
 export COB_OBJECT_EXT COB_EXE_EXT
 
